samples/troubleshooting/valid/R13.dita
<?xml version="1.0" encoding="UTF-8"?>
<troubleshooting>
  <title>Sample Troubleshooting Title</title>
  <prolog/>
  <troublebody>
    <troubleSolution>
      <remedy>
        <title>Specific Remedy Title</title>
        <steps-informal><p>Follow the informal procedure.</p></steps-informal>
      </remedy>
    </troubleSolution>
  </troublebody>
</troubleshooting>