samples/troubleshooting/invalid/R8.dita
<?xml version="1.0" encoding="UTF-8"?>
<troubleshooting>
  <title>T</title>
  <prolog/>
  <troublebody>
    <troubleSolution/>
  </troublebody>
</troubleshooting>